# cmakip

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
src/cmakip/: __init__.py  __main__.py
