[metadata]
name = cmakip
version = 0.0.1
description = A simple tool for installing CMake projects in conda and venv environments.
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvio Traversaro
author_email = silvio.traversaro@iit.it
license = BSD-3-Clause
license_file = LICENSE
platforms = any
url = https://github.com/ami-iit/cmakip

project_urls =
    Changelog = https://github.com/ami-iit/cmakip/releases
    Tracker = https://github.com/ami-iit/cmakip/issues
    Source = https://github.com/ami-iit/cmakip

keywords =
    cmake
    conda
    venv


# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Education
    Topic :: Software Development
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cmakip = cmakip.__main__:entrypoint

